--- a/MainApp/donate.ui
+++ b/MainApp/donate.ui
@@ -19,7 +19,7 @@ border: 1px solid black;
 background-color: #2c2c2c;
 }</string>
   </property>
-  <widget class="QWidget" name="widget" native="true">
+  <widget class="QWidget" name="titleLayout" native="true">
    <property name="geometry">
     <rect>
      <x>0</x>
@@ -34,7 +34,7 @@ background-color: #2c2c2c;
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">QWidget#widget{
+    <string notr="true">QWidget#titleLayout{
 border: 1px solid black;
 background-color: transparent;
 }</string>
@@ -237,7 +237,7 @@ p, li { white-space: pre-wrap; }
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="wechatLabel">
    <property name="geometry">
     <rect>
      <x>565</x>
@@ -256,7 +256,7 @@ p, li { white-space: pre-wrap; }
     <string>We Chat</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_2">
+  <widget class="QLabel" name="alipayLabel">
    <property name="geometry">
     <rect>
      <x>710</x>
@@ -275,7 +275,7 @@ p, li { white-space: pre-wrap; }
     <string>Alipay</string>
    </property>
   </widget>
-  <widget class="QTextEdit" name="textEdit_2">
+  <widget class="QTextEdit" name="infoText">
    <property name="geometry">
     <rect>
      <x>10</x>
