--- a/MainApp/DonateWindow.ui
+++ b/MainApp/DonateWindow.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>donate</class>
- <widget class="QDialog" name="donate">
+ <class>DonateWindow</class>
+ <widget class="QDialog" name="DonateWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -14,7 +14,7 @@
    <string>Dialog</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">QWidget#donate{
+   <string notr="true">QWidget#DonateWindow{
 border: 1px solid black;
 background-color: #2c2c2c;
 }</string>
@@ -313,7 +313,7 @@ p, li { white-space: pre-wrap; }
   <connection>
    <sender>closeButton</sender>
    <signal>clicked()</signal>
-   <receiver>donate</receiver>
+   <receiver>DonateWindow</receiver>
    <slot>close()</slot>
    <hints>
     <hint type="sourcelabel">
