--- a/MainApp/SettingWindow.ui
+++ b/MainApp/SettingWindow.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>settingpage</class>
- <widget class="QDialog" name="settingpage">
+ <class>SettingWindow</class>
+ <widget class="QDialog" name="SettingWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -14,7 +14,7 @@
    <string>Dialog</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">QWidget#settingpage{
+   <string notr="true">QWidget#SettingWindow{
 border: 1px solid black;
 background-color: #2c2c2c;
 }</string>
@@ -406,7 +406,7 @@ background-color: black;
   <connection>
    <sender>closeButton</sender>
    <signal>clicked()</signal>
-   <receiver>settingpage</receiver>
+   <receiver>SettingWindow</receiver>
    <slot>close()</slot>
    <hints>
     <hint type="sourcelabel">
