--- a/src/resources/app.qrc
+++ b/src/resources/app.qrc
@@ -1,97 +1,100 @@
 <RCC>
-    <qresource prefix="/">
-        <file>assets/save.svg</file>
-        <file>assets/replace.svg</file>
-        <file>assets/replace_all.svg</file>
-        <file>assets/redo.svg</file>
-        <file>assets/undo.svg</file>
-        <file>assets/casesensitive.svg</file>
-        <file>assets/regex.svg</file>
-        <file>assets/delete.svg</file>
-        <file>assets/reload.svg</file>
-        <file>assets/down.svg</file>
-        <file>wallpapers/wallpaper.jpg</file>
-        <file>wallpapers/wallpaper2.jpg</file>
-        <file>stylesheets/RxFluent.qss</file>
-        <file>stylesheets/CodeEditor.xml</file>
-        <file>plugins/bilibili.svg</file>
-        <file>plugins/binary.svg</file>
-        <file>plugins/console.svg</file>
-        <file>plugins/dataflow.svg</file>
-        <file>plugins/debugger.svg</file>
-        <file>plugins/editor.svg</file>
-        <file>plugins/out3rn3t_expl0rer.svg</file>
-        <file>plugins/rxreader.svg</file>
-        <file>plugins/starter.svg</file>
-        <file>plugins/tools.svg</file>
-        <file>plugins/wiki.svg</file>
-        <file>fonts/mono.ttf</file>
-        <file>fonts/UI.otf</file>
-        <file>fonts/wqy-microhei.ttc</file>
-        <file>assets/workspace_is_empty.png</file>
-        <file>assets/workspace.svg</file>
-        <file>assets/wechatpay.png</file>
-        <file>assets/warning.svg</file>
-        <file>assets/settings.svg</file>
-        <file>assets/team.svg</file>
-        <file>assets/send.svg</file>
-        <file>assets/save.svg</file>
-        <file>assets/Reverier.png</file>
-        <file>assets/online.svg</file>
-        <file>assets/ok.svg</file>
-        <file>assets/offline.svg</file>
-        <file>assets/new_folder.svg</file>
-        <file>assets/new_file.svg</file>
-        <file>assets/mini.svg</file>
-        <file>assets/menu.svg</file>
-        <file>assets/max.svg</file>
-        <file>assets/ISAE.svg</file>
-        <file>assets/isae-splash.png</file>
-        <file>assets/isae-logo.png</file>
-        <file>assets/future.svg</file>
-        <file>assets/folder.svg</file>
-        <file>assets/fail.svg</file>
-        <file>assets/CPU.svg</file>
-        <file>assets/close.svg</file>
-        <file>assets/apps.svg</file>
-        <file>assets/alipay.png</file>
-        <file>assets/a-z/0.svg</file>
-        <file>assets/a-z/1.svg</file>
-        <file>assets/a-z/2.svg</file>
-        <file>assets/a-z/3.svg</file>
-        <file>assets/a-z/4.svg</file>
-        <file>assets/a-z/5.svg</file>
-        <file>assets/a-z/6.svg</file>
-        <file>assets/a-z/7.svg</file>
-        <file>assets/a-z/8.svg</file>
-        <file>assets/a-z/9.svg</file>
-        <file>assets/a-z/a.svg</file>
-        <file>assets/a-z/b.svg</file>
-        <file>assets/a-z/c.svg</file>
-        <file>assets/a-z/d.svg</file>
-        <file>assets/a-z/e.svg</file>
-        <file>assets/a-z/f.svg</file>
-        <file>assets/a-z/g.svg</file>
-        <file>assets/a-z/h.svg</file>
-        <file>assets/a-z/i.svg</file>
-        <file>assets/a-z/j.svg</file>
-        <file>assets/a-z/k.svg</file>
-        <file>assets/a-z/l.svg</file>
-        <file>assets/a-z/m.svg</file>
-        <file>assets/a-z/n.svg</file>
-        <file>assets/a-z/nopic.svg</file>
-        <file>assets/a-z/o.svg</file>
-        <file>assets/a-z/offline.svg</file>
-        <file>assets/a-z/p.svg</file>
-        <file>assets/a-z/q.svg</file>
-        <file>assets/a-z/r.svg</file>
-        <file>assets/a-z/s.svg</file>
-        <file>assets/a-z/t.svg</file>
-        <file>assets/a-z/u.svg</file>
-        <file>assets/a-z/v.svg</file>
-        <file>assets/a-z/w.svg</file>
-        <file>assets/a-z/x.svg</file>
-        <file>assets/a-z/y.svg</file>
-        <file>assets/a-z/z.svg</file>
-    </qresource>
+  <qresource prefix="/">
+    <file>assets/file.svg</file>
+    <file>assets/alipay.png</file>
+    <file>assets/apps.svg</file>
+    <file>assets/casesensitive.svg</file>
+    <file>assets/close.svg</file>
+    <file>assets/CPU.svg</file>
+    <file>assets/delete.svg</file>
+    <file>assets/down.svg</file>
+    <file>assets/fail.svg</file>
+    <file>assets/fire.svg</file>
+    <file>assets/folder.svg</file>
+    <file>assets/future.svg</file>
+    <file>assets/isae-logo.png</file>
+    <file>assets/isae-splash.png</file>
+    <file>assets/ISAE.svg</file>
+    <file>assets/max.svg</file>
+    <file>assets/menu.svg</file>
+    <file>assets/mini.svg</file>
+    <file>assets/new_file.svg</file>
+    <file>assets/new_folder.svg</file>
+    <file>assets/offline.svg</file>
+    <file>assets/ok.svg</file>
+    <file>assets/online.svg</file>
+    <file>assets/redo.svg</file>
+    <file>assets/regex.svg</file>
+    <file>assets/reload.svg</file>
+    <file>assets/replace.svg</file>
+    <file>assets/replace_all.svg</file>
+    <file>assets/Reverier.png</file>
+    <file>assets/save.svg</file>
+    <file>assets/send.svg</file>
+    <file>assets/settings.svg</file>
+    <file>assets/shake.svg</file>
+    <file>assets/stream.svg</file>
+    <file>assets/team.svg</file>
+    <file>assets/undo.svg</file>
+    <file>assets/warning.svg</file>
+    <file>assets/wechatpay.png</file>
+    <file>assets/workspace.svg</file>
+    <file>assets/workspace_is_empty.png</file>
+    <file>wallpapers/wallpaper.jpg</file>
+    <file>wallpapers/wallpaper2.jpg</file>
+    <file>stylesheets/RxFluent.qss</file>
+    <file>stylesheets/CodeEditor.xml</file>
+    <file>plugins/bilibili.svg</file>
+    <file>plugins/binary.svg</file>
+    <file>plugins/console.svg</file>
+    <file>plugins/dataflow.svg</file>
+    <file>plugins/debugger.svg</file>
+    <file>plugins/editor.svg</file>
+    <file>plugins/out3rn3t_expl0rer.svg</file>
+    <file>plugins/rxreader.svg</file>
+    <file>plugins/starter.svg</file>
+    <file>plugins/tools.svg</file>
+    <file>plugins/wiki.svg</file>
+    <file>fonts/mono.ttf</file>
+    <file>fonts/UI.otf</file>
+    <file>fonts/wqy-microhei.ttc</file>
+    <file>assets/a-z/0.svg</file>
+    <file>assets/a-z/1.svg</file>
+    <file>assets/a-z/2.svg</file>
+    <file>assets/a-z/3.svg</file>
+    <file>assets/a-z/4.svg</file>
+    <file>assets/a-z/5.svg</file>
+    <file>assets/a-z/6.svg</file>
+    <file>assets/a-z/7.svg</file>
+    <file>assets/a-z/8.svg</file>
+    <file>assets/a-z/9.svg</file>
+    <file>assets/a-z/a.svg</file>
+    <file>assets/a-z/b.svg</file>
+    <file>assets/a-z/c.svg</file>
+    <file>assets/a-z/d.svg</file>
+    <file>assets/a-z/e.svg</file>
+    <file>assets/a-z/f.svg</file>
+    <file>assets/a-z/g.svg</file>
+    <file>assets/a-z/h.svg</file>
+    <file>assets/a-z/i.svg</file>
+    <file>assets/a-z/j.svg</file>
+    <file>assets/a-z/k.svg</file>
+    <file>assets/a-z/l.svg</file>
+    <file>assets/a-z/m.svg</file>
+    <file>assets/a-z/n.svg</file>
+    <file>assets/a-z/nopic.svg</file>
+    <file>assets/a-z/o.svg</file>
+    <file>assets/a-z/offline.svg</file>
+    <file>assets/a-z/p.svg</file>
+    <file>assets/a-z/q.svg</file>
+    <file>assets/a-z/r.svg</file>
+    <file>assets/a-z/s.svg</file>
+    <file>assets/a-z/t.svg</file>
+    <file>assets/a-z/u.svg</file>
+    <file>assets/a-z/v.svg</file>
+    <file>assets/a-z/w.svg</file>
+    <file>assets/a-z/x.svg</file>
+    <file>assets/a-z/y.svg</file>
+    <file>assets/a-z/z.svg</file>
+  </qresource>
 </RCC>
