--- a/src/extensions/editor/editor.ui
+++ b/src/extensions/editor/editor.ui
@@ -49,6 +49,42 @@
                                 <number>0</number>
                             </property>
                             <item>
+                                <widget class="QPushButton" name="fileNameButton">
+                                    <property name="minimumSize">
+                                        <size>
+                                            <width>0</width>
+                                            <height>32</height>
+                                        </size>
+                                    </property>
+                                    <property name="maximumSize">
+                                        <size>
+                                            <width>16777215</width>
+                                            <height>32</height>
+                                        </size>
+                                    </property>
+                                    <property name="font">
+                                        <font>
+                                            <family>JetBrains Mono</family>
+                                            <pointsize>14</pointsize>
+                                        </font>
+                                    </property>
+                                    <property name="text">
+                                        <string>wacom.py</string>
+                                    </property>
+                                    <property name="icon">
+                                        <iconset resource="../../resources/app.qrc">
+                                            <normaloff>:/assets/file.svg</normaloff>:/assets/file.svg
+                                        </iconset>
+                                    </property>
+                                    <property name="iconSize">
+                                        <size>
+                                            <width>24</width>
+                                            <height>24</height>
+                                        </size>
+                                    </property>
+                                </widget>
+                            </item>
+                            <item>
                                 <widget class="QPushButton" name="saveButton">
                                     <property name="minimumSize">
                                         <size>
