--- a/src/extensions/editor/editorSettingPage.ui
+++ b/src/extensions/editor/editorSettingPage.ui
@@ -1,34 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
-    <class>EditorSettingPage</class>
-    <widget class="QWidget" name="EditorSettingPage">
-        <property name="geometry">
-            <rect>
-                <x>0</x>
-                <y>0</y>
-                <width>780</width>
-                <height>524</height>
-            </rect>
-        </property>
-        <layout class="QVBoxLayout" name="verticalLayout">
-            <item>
-                <widget class="QLabel" name="label">
-                    <property name="font">
-                        <font>
-                            <family>文泉驿等宽微米黑</family>
-                            <pointsize>14</pointsize>
-                        </font>
-                    </property>
-                    <property name="text">
-                        <string>Editor: 插件没有提供配置项.</string>
-                    </property>
-                    <property name="alignment">
-                        <set>Qt::AlignCenter</set>
-                    </property>
-                </widget>
-            </item>
-        </layout>
+ <class>EditorSettingPage</class>
+ <widget class="QWidget" name="EditorSettingPage">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>780</width>
+    <height>524</height>
+   </rect>
+  </property>
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="spacing">
+    <number>0</number>
+   </property>
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
+   <item>
+    <widget class="QTabWidget" name="pageStack">
+     <widget class="QWidget" name="tabWidgetPage1">
+      <attribute name="title">
+       <string/>
+      </attribute>
+     </widget>
+     <widget class="QWidget" name="tabWidgetPage2">
+      <attribute name="title">
+       <string/>
+      </attribute>
+     </widget>
     </widget>
-    <resources/>
-    <connections/>
+   </item>
+  </layout>
+ </widget>
+ <resources/>
+ <connections/>
 </ui>
